--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   dotted_border: ^2.0.0+1
   image_picker: ^0.8.4
   intl: ^0.17.0
+  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
